--- a/package.json
+++ b/package.json
@@ -23,10 +23,6 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.10",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "framer-motion": "^4.1.17",
     "next": "latest",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
@@ -39,6 +35,7 @@
     "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "autoprefixer": "^10.3.7",
     "babel-jest": "^27.0.2",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
@@ -48,7 +45,9 @@
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
+    "postcss": "^8.3.9",
     "prettier": "^2.0.2",
+    "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   }
 }
