--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "autoprefixer": "^10.3.7",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-testing-library": "^5.0.0",
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
