--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "classnames": "^2.3.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
