--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         - network
     ports:
         - 5433:5433
-    command: ["--connection", "${DATABASE_URL}", "--port", "5433", "--schema", "public", "--append-plugins", "postgraphile-plugin-connection-filter"]
+    command: ["--connection", "${DATABASE_URL}", "--port", "5433", "--schema", "website", "--append-plugins", "postgraphile-plugin-connection-filter"]
 
 networks:
   network:
