--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -29,7 +29,14 @@ services:
         - network
     ports:
         - 5433:5433
-    command: ["--connection", "${DATABASE_URL}", "--port", "5433", "--schema", "website", "--default-role", "website_anonymous", --append-plugins", "postgraphile-plugin-connection-filter", "--jwt-token-identifier", "website.jwt_token"]
+    command: >
+      --connection ${DATABASE_URL}
+      --port 5433
+      --schema website
+      --default-role website_anonymous
+      --append-plugins postgraphile-plugin-connection-filter
+      --jwt-token-identifier website.jwt_token
+      --jwt-secret ${JWT_SECRET}
 
 networks:
   network:
