--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
