--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-  "functions": {
-    "api/*.go": {
-      "memory": 128,
-      "maxDuration": 10
+  "use": "@vercel/go@latest",
+  "src": "api/login.go",
+  "config": {
+    "zeroConfig": true,
+    "functions": {
+      "api/*.go": {
+        "memory": 128,
+        "maxDuration": 10
+      }
     }
   }
-}
