--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@prisma/client": "3.5.0",
     "classnames": "^2.3.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
@@ -54,7 +55,7 @@
     "lint-staged": "^10.0.10",
     "postcss": "^8.3.9",
     "prettier": "^2.0.2",
-    "prisma": "^3.5.0",
+    "prisma": "3.5.0",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   }
