--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "@vercel/node": "^1.12.1",
     "autoprefixer": "^10.3.7",
     "babel-jest": "^27.3.1",
     "eslint": "^7.19.0",
