--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "classnames": "^2.3.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
+    "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4"
@@ -38,6 +39,7 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
+    "@types/pg": "^8.6.1",
     "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
@@ -56,7 +58,7 @@
     "lint-staged": "^10.0.10",
     "postcss": "^8.3.9",
     "prettier": "^2.0.2",
-    "prisma": "3.5.0",
+    "prisma": "^3.5.0",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   }
