--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@heroicons/react": "^1.0.5",
     "@prisma/client": "3.5.0",
     "classnames": "^2.3.1",
+    "graphql": "^16.0.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
     "pg": "^8.7.1",
+    "postgraphile": "^4.12.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4"
