--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "3.5.0",
     "classnames": "^2.3.1",
     "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
     "pg": "^8.7.1",
@@ -40,6 +41,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^14.14.25",
     "@types/pg": "^8.6.1",
     "@types/react": "^17.0.1",
