--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "@heroicons/react": "^1.0.5",
     "@prisma/client": "3.5.0",
     "classnames": "^2.3.1",
+    "cross-fetch": "^3.1.4",
     "graphql": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "^12.0.2",
