--- a/package.json
+++ b/package.json
@@ -25,15 +25,12 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@heroicons/react": "^1.0.5",
-    "@prisma/client": "3.5.0",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
     "graphql": "^16.0.1",
-    "jsonwebtoken": "^8.5.1",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
-    "pg": "^8.7.1",
-    "postgraphile": "^4.12.5",
+    "pino-logflare": "^0.3.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4"
@@ -43,9 +40,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^14.14.25",
-    "@types/pg": "^8.6.1",
     "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
