--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@supabase/supabase-js": "^1.28.2",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
     "next": "^12.0.2",
