--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pino-logflare": "^0.3.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.20.4"
+    "react-hook-form": "^7.20.4",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
