--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
+    "@swc/core": "^1.2.120",
+    "@swc/jest": "^0.2.15",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.23",
@@ -46,7 +48,6 @@
     "@typescript-eslint/parser": "^4.14.2",
     "@vercel/node": "^1.12.1",
     "autoprefixer": "^10.3.7",
-    "babel-jest": "^27.3.1",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest-dom": "^3.9.2",
@@ -54,7 +55,7 @@
     "eslint-plugin-testing-library": "^5.0.0",
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.4",
+    "jest": "^27.4.4",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
     "postcss": "^8.3.9",
