--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^1.28.2",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
+    "framer-motion": "^5.6.0",
     "next": "^12.0.2",
     "next-seo": "^4.28.1",
     "pino-logflare": "^0.3.12",
