--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
