--- a/package.json
+++ b/package.json
@@ -64,5 +64,6 @@
     "prettier": "^2.0.2",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
