--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@next/eslint-plugin-next": "^12.0.2",
     "@swc/core": "^1.2.120",
     "@swc/jest": "^0.2.15",
+    "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
@@ -64,5 +66,6 @@
     "prettier": "^2.0.2",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
