--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.28.2",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
@@ -30,7 +31,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.33.1"
+    "react-intersection-observer": "^8.33.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
