--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
     "framer-motion": "^5.6.0",
-    "next": "^12.0.2",
+    "next": "latest",
     "next-seo": "^4.28.1",
     "pino-logflare": "^0.3.12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "latest",
+    "react-dom": "latest",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
