--- a/package.json
+++ b/package.json
@@ -64,5 +64,8 @@
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   },
+  "resolutions": {
+    "@types/react": "17.0.30"
+  },
   "packageManager": "yarn@3.2.1"
 }
