--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@supabase/supabase-js": "^1.28.2",
+    "@testing-library/jest-dom": "latest",
     "classnames": "^2.3.1",
     "cross-fetch": "^3.1.4",
     "framer-motion": "^5.6.0",
@@ -38,9 +39,7 @@
     "@next/eslint-plugin-next": "^12.0.2",
     "@swc/core": "^1.2.120",
     "@swc/jest": "^0.2.15",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/react": "latest",
     "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
