--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
