--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "@vercel/node": "^1.12.1",
