--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.33.1",
-    "react-redux": "^8.0.2"
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
