--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "framer-motion": "^5.6.0",
     "next": "latest",
     "next-seo": "^4.28.1",
-    "pino-logflare": "^0.3.12",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.33.1"
+    "react-intersection-observer": "^8.33.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.2",
@@ -43,7 +43,6 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
-    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "@vercel/node": "^1.12.1",
