--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-testing-library": "^5.0.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
