Fix missing types, refactor, add react-hooks eslint plugin (#50)
* Deconstruct rejectWithValue

* Refactor with typed payload

* Refactor payloads with types

* refactor: useCallback, check with fullfilled.match

* Add eslint-react-hooks and rules

* Update config

* Refactor, useCallback and add missing deps

* Add missing deps to dependency array

* Fix calling same reducer for action

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "react-hooks"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
@@ -25,6 +25,8 @@
     "react/react-in-jsx-scope": 0,
     "react/display-name": 0,
     "react/prop-types": 0,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-member-accessibility": 0,
     "@typescript-eslint/indent": 0,
