--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "test": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test",
+    "test-all": "npm run lint && npm run type-check && npm test",
     "postinstall": "husky install"
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
-      "yarn lint",
-      "yarn format"
+      "npm run lint",
+      "npm run format"
     ]
   },
   "dependencies": {
@@ -29,7 +29,7 @@
     "next-seo": "^4.28.1",
     "react": "latest",
     "react-dom": "latest",
-    "react-hook-form": "^7.20.4",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-redux": "^8.0.2"
@@ -65,6 +65,5 @@
   },
   "resolutions": {
     "@types/react": "17.0.30"
-  },
-  "packageManager": "yarn@3.2.1"
+  }
 }
