First batch upgrade

--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     ]
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.5",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@heroicons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.1",
     "@supabase/supabase-js": "^1.28.2",
     "@testing-library/jest-dom": "latest",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "cross-fetch": "^3.1.4",
-    "framer-motion": "^5.6.0",
+    "eslint-config-next": "latest",
+    "framer-motion": "^7.6.15",
     "next": "latest",
-    "next-seo": "^4.28.1",
+    "next-seo": "^5.14.1",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.33.1",
