--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js",
     "test": "jest",
-    "test-all": "yarn lint && yarn type-check && npm test",
+    "test-all": "pnpm lint && pnpm type-check && pnpm test",
     "postinstall": "husky install"
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
-      "yarn lint",
-      "yarn format"
+      "pnpm lint",
+      "pnpm format"
     ]
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "@next/eslint-plugin-next": "^13.0.5",
     "@swc/core": "^1.3.21",
     "@swc/jest": "^0.2.23",
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
