--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@heroicons/react": "v1",
     "@reduxjs/toolkit": "^1.9.1",
     "@supabase/supabase-js": "^1.28.2",
-    "@testing-library/jest-dom": "latest",
     "classnames": "^2.3.2",
     "cross-fetch": "^3.1.4",
     "eslint-config-next": "latest",
@@ -40,11 +39,13 @@
     "@swc/core": "^1.3.21",
     "@swc/jest": "^0.2.23",
     "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.25",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vercel/node": "^2.7.0",
