--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@heroicons/react": "v1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@supabase/gotrue-js": "^2.11.0",
     "@supabase/supabase-js": "^1.28.2",
     "classnames": "^2.3.2",
     "cross-fetch": "^3.1.4",
