--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
     }
   },
   "rules": {
