--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "import",
-    "@typescript-eslint",
-    "react-hooks"
-  ],
+  "plugins": ["import", "@typescript-eslint", "react-hooks"],
   "extends": [
     "eslint:recommended",
     "plugin:import/recommended",
@@ -69,10 +65,7 @@
       "no-console": [
         2,
         {
-          "allow": [
-            "warn",
-            "error"
-          ]
+          "allow": ["warn", "error"]
         }
       ]
     }
