Oh absolute paths... this solves it finally

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "incremental": true,
     "baseUrl": "."
   },
+  "paths": {
+    "components/*": ["./components/*"],
+    "pages/*": ["./pages/*"],
+    "styles/*": ["./styles/*"],
+    "lib/*": ["./lib/*"],
+    "fakeData/*": ["./fakeData/*"]
+  },
   "exclude": ["node_modules", ".next", "out"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"]
 }
