--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx",
+    "lint": "eslint_d . --ext ts --ext tsx",
     "test": "jest",
     "test-all": "pnpm lint && pnpm type-check && pnpm test",
     "postinstall": "husky install"
@@ -53,8 +53,6 @@
     "autoprefixer": "^10.3.7",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
