--- a/package.json
+++ b/package.json
@@ -18,53 +18,53 @@
     ]
   },
   "dependencies": {
-    "@heroicons/react": "v1",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@supabase/gotrue-js": "^2.11.0",
-    "@supabase/supabase-js": "^1.28.2",
+    "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.9.4",
+    "@supabase/gotrue-js": "^2.22.1",
+    "@supabase/supabase-js": "^1.35.7",
     "classnames": "^2.3.2",
-    "cross-fetch": "^3.1.4",
+    "cross-fetch": "^3.1.5",
     "eslint-config-next": "latest",
-    "framer-motion": "^7.6.15",
+    "framer-motion": "^7.10.3",
     "next": "latest",
-    "next-seo": "^5.14.1",
+    "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.40.0",
-    "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.33.1",
-    "react-redux": "^8.0.2"
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-intersection-observer": "^8.34.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.0.5",
-    "@swc/core": "^1.3.21",
-    "@swc/jest": "^0.2.23",
+    "@next/eslint-plugin-next": "^13.3.0",
+    "@swc/core": "^1.3.51",
+    "@swc/jest": "^0.2.26",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.10",
-    "@types/react": "^18.0.25",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vercel/node": "^2.7.0",
-    "autoprefixer": "^10.3.7",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "@vercel/node": "^2.10.3",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "husky": "^8.0.2",
+    "eslint-plugin-testing-library": "^5.10.3",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "jest-watch-typeahead": "^2.2.1",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "postcss": "^8.4.22",
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^4.9.5"
   }
 }
